# pwc_net_ros

./: .gitignore  CMakeLists.txt  LICENSE  README.md  nodelet_plugins.xml  package.xml
docker/: .env  docker-compose.yml  dockerfile  ros_entrypoint.sh
docker/caffe/: Makefile.config
include/: pwc_net_nodelet.h  sample_node.h
include/pwc_net/: pwc_net.h
launch/: sample.launch  test.launch  test_service.launch
model/: pwc_net_test.diff  pwc_net_test.prototxt
nodes/: pwc_net_node.py
rqt/: test.perspective
src/: pwc_net.cu  pwc_net_node.cpp  sample_node.cpp  sample_node_main.cpp
src/pwc_net/: pwc_net_nodelet.cpp  pwc_net_nodelet.cu
