<?xml version="1.0"?>
<package format="2">
  <name>pwc_net</name>
  <version>0.1.0</version>
  <description>ROS interface for PWC-Net</description>

  <maintainer email="fujimoto@aisl.cs.tut.ac.jp">Hironori Fujimoto</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>nodelet</depend>
  <depend>optical_flow_msgs</depend>
  <depend>optical_flow_srvs</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <exec_depend>compressed_image_transport</exec_depend>
  <exec_depend>image_view</exec_depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml"/>
  </export>
</package>
